examples/test/testpolicy19565.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19565
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key33: value40
      key16: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value23
          key8: value0
      podSelector:
        matchLabels:
          key39: value49
